Upgrade Korat for Java 17 and Alloy 6